--- a/slides/intro-ml.Rmd
+++ b/slides/intro-ml.Rmd
@@ -116,11 +116,7 @@ class: middle, center, inverse
 
 --
 
-<img src="https://5.imimg.com/data5/NT/NK/MY-38742550/life-insurance-health-insurance-and-general-insurance-250x250.png" style="position: fixed; width: 20%; top: 200px; left: 100px;">
-
---
-
-<img src="https://i.ytimg.com/vi/DmPLEURo-Vk/maxresdefault.jpg" style="position: fixed; width: 40%; top: 200px; left: 300px;">
+<img src="https://5.imimg.com/data5/NT/NK/MY-38742550/life-insurance-health-insurance-and-general-insurance-250x250.png" style="position: fixed; width: 20%; top: 200px; left: 300px;">
 
 ---
 
@@ -133,8 +129,7 @@ Leo Breiman: ["Statistical Modeling: The Two Cultures"](https://projecteuclid.or
 <img src="https://upload.wikimedia.org/wikipedia/en/4/4d/Leo_Breiman.jpg">
 
 ---
-
-# Machine Learning e Estatística
+class: center, middle
 
 <img src = "img/box.png" class = "center2">
 
@@ -155,8 +150,7 @@ y \approx f(x)
 $$
 
 ---
-
-# Machine Learning e Estatística
+class: center, middle
 
  <img src="img/box-data-models.png" class = "center2"> 
  
@@ -168,10 +162,12 @@ $$
 <img src="img/box-algorithmic-models.png" class = "center2">
 
 ---
+class: center, middle
 
 <img src="https://wordstream-files-prod.s3.amazonaws.com/s3fs-public/styles/simple_image/public/images/machine-learning1.png?Q_SmWhhhAEOO_32HNjPhcxsPhreWV26o&itok=yjEJbEKD" style="display: block; margin-left: auto; margin-right: auto;"></img>
 
 ---
+class: center, middle
 
 <img src="img/ml_101.png" class = "center2">
 
@@ -192,12 +188,12 @@ $$
 <img src="https://media.giphy.com/media/sqefuSs2oD8sg/giphy.gif" class="smart_cat">
 
 ---
-
-<br>
+class: center, middle
 
 <img src="img/aviao.png" class="center2">
 
 ---
+class: center, middle
 
 <img src="img/google.png" class="google">
 
