--- a/scripts/01-regressao-recipes-caret.Rmd
+++ b/scripts/01-regressao-recipes-caret.Rmd
@@ -6,11 +6,11 @@ output: html_document
 ## Pacotes
 
 ```{r}
-library(tidyverse)
-
+# install.packages("tidyverse")
 # install.packages("recipes")
 # install.packages("caret")
 
+library(tidyverse)
 library(recipes)
 library(caret)
 ```
@@ -86,10 +86,6 @@ Em geral, fazer modelagem preditiva envolve 3 tarefas:
 
 Vamos utilizar o pacote `recipes` como um ambiente padronizado para especificação de modelos.
 
-```{r}
-knitr::include_graphics("https://raw.githubusercontent.com/tidymodels/recipes/master/recipes_hex_thumb.png")
-```
-
 
 O pacote tem quatro principais funções:
 
@@ -101,8 +97,72 @@ O pacote tem quatro principais funções:
 
 - `bake()`: aplica as modificações a uma base da dados.
 
+## Exemplo
 
-## Exemplo (diamonds)
+Vamos supor que recebemos mais preditores para a base de carros.
+
+```{r}
+n <- nrow(cars)
+
+cars_v2 <- cars %>% 
+  mutate(
+    montadora = sample(c("inglesa", "alema"), n, replace = TRUE),
+    experiencia = rnorm(n, 40, 4),
+    chuva = rbernoulli(n, p = ifelse(cars$dist > mean(cars$dist), 0.8, 0.2)),
+    chuva = ifelse(chuva, "sim", "não")
+  )
+
+View(cars_v2)
+```
+
+Criamos a especificação do modelo criando receitas.
+
+```{r}
+receita <- recipe(dist ~ ., data = cars_v2) %>% 
+  step_dummy(all_nominal()) %>% 
+  step_log(dist)
+
+prep <- prep(receita, data = cars_v2)
+
+base_treino <- bake(prep, cars_v2)
+
+ajuste <- lm(dist ~ ., base_treino)
+summary(ajuste)
+```
+
+## Caret
+
+- Abreviação de *Classification And Regression Training*.
+
+- Padroniza o ajuste de modelos preditivos no R.
+
+- Também padroniza a forma de avaliar os resultados e fazer predições.
+
+- Podemo especificar os modelos diretamente a partir do `recipes`.
+
+- Abstrai a aplicação de diversos tipos de validação cruzada.
+
+- Permite processamento em paralelo.
+
+Para ajustar um modelo, sempre utilizamos a função `train()`.
+
+```{r}
+modelo <- train(
+  receita, 
+  cars_v2, 
+  method = "lm"
+)
+
+modelo
+
+# Para acessar o modelo final
+summary(modelo$finalModel)
+
+# Função para avaliar a "importância" de cada preditor
+varImp(modelo)
+```
+
+## Exercício (diamonds)
 
 Queremos prever o valor de um diamante a partir das características de cada pedra.
 
@@ -118,129 +178,34 @@ diamantes <- diamantes %>%
     color = as.character(color),
     clarity = as.character(clarity)
   )
+
+# Criando uma base de "novas observações"
+id_novos <- sample(1:nrow(diamantes), size = 1000)
+
+diamantes_novos <- slice(diamantes, id_novos)
+diamantes <- slice(diamantes, -id_novos)
 ```
 
 Vamos usar o pacote `recipes` para especificar nosso modelo.
 
+- Transforme todas as variáveis categóricas em variáveis indicadoras.
+- Retire preditores muito correlacionados.
+- Retire preditores com variância muito baixa.
+
 ```{r}
-receita <- recipe(price ~ ., data = diamantes) %>%
-  step_dummy(all_nominal()) %>%
-  step_nzv(all_predictors()) %>%
-  step_corr(all_predictors())
 
-prep <- prep(receita, diamantes)
-
-base_treino <- bake(prep, diamantes)
-
-ajuste <- lm(price ~ ., base_treino)
-summary(ajuste)
 ```
 
-## Caret
-
-- Abreviação de *Classification And Regression Training*.
-
-- Padroniza o ajuste de modelos preditivos no R.
-
-- Abstrai a aplicação de diversos tipos de validação cruzada.
-
-- Também padroniza a forma de avaliar os resultados e fazer predições.
-
-- Permite processamento em paralelo.
-
-- Podemo especificar os modelos diretamente a partir do `recipes`.
-
-Para ajustar um modelo, sempre utilizamos a função `train()`.
+Ajuste o modelo usando a função `train()` do pacote `caret`.
 
 ```{r}
-set.seed(20032019)
 
-modelo <- train(
-  receita, 
-  diamantes, 
-  method = "lm",
-  trControl = trainControl(method = "cv", number = 5)
-)
-
-modelo
-
-# Para acessar o modelo final
-summary(modelo$finalModel)
-
-# Função para avaliar a "importância" de cada preditor
-varImp(modelo)
 ```
 
-Fazendo previsões:
+Faça as previsões para a base de novos diamentes.
 
 ```{r}
-# Valores obs vs pred
-diamantes %>% 
-  mutate(pred = predict(modelo, diamantes)) %>% 
-  ggplot(aes(y = pred, x = price)) +
-  geom_point() +
-  geom_abline(intercept = 0, slope = 1, color = "blue") +
-  theme_bw()
 
-diamantes %>% 
-  mutate(pred = predict(modelo, diamantes)) %>% 
-  ggplot(aes(y = pred, x = price)) +
-  geom_point() +
-  geom_abline(intercept = 0, slope = 1, color = "blue") +
-  theme_bw() +
-  coord_cartesian(x = c(0, 20000), ylim = c(0, 25000))
-
-diamantes %>% 
-  mutate(pred = predict(modelo, diamantes)) %>% 
-  arrange(desc(pred)) %>% 
-  View()
 ```
 
 
-Vamos usar a transformação log para tentar melhorar o ajuste.
-
-```{r}
-diamantes <- diamantes %>% 
-  mutate(
-    depth2 = round(2 * z / (x + y), 3)*100, 
-    teste = near(depth, depth2, tol = 1)
-  ) %>% 
-  filter(teste == TRUE) %>% 
-  select(-depth2, -teste)
-
-receita <- recipe(price ~ . , data = diamantes) %>%
-  step_dummy(all_nominal(), -all_outcomes()) %>%
-  step_nzv(all_predictors()) %>%
-  step_corr(all_predictors()) %>%
-  step_log(all_outcomes())
-
-modelo <- train(
-  receita, 
-  diamantes, 
-  method = "lm", 
-  trControl = trainControl(method = "cv", number = 5)
-)
-
-modelo
-```
-
-Fazendo as previsões:
-
-```{r}
-# Valores obs vs pred 
-diamantes %>% 
-  mutate(pred = predict(modelo, diamantes)) %>% 
-  ggplot(aes(y = pred, x = log(price))) +
-  geom_point() +
-  geom_abline(intercept = 0, slope = 1, color = "blue") +
-  theme_bw()
-
-# Valores obs vs pred 
-diamantes %>% 
-  mutate(pred = predict(modelo, diamantes)) %>% 
-  ggplot(aes(y = exp(pred), x = price)) +
-  geom_point() +
-  geom_abline(intercept = 0, slope = 1, color = "blue") +
-  theme_bw()
-
-```
